--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,27 @@
 main {
     font-family: 'Roboto Mono', monospace;
-    position: relative;
+    position: absolute;
+    max-width: 600px;
+    height: 400px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: 
+    padding: 20px;
+    border-radius: 30px;
+    -webkit-box-shadow: 2px 6px 20px 8px rgba(204,198,204,1);
+    -moz-box-shadow: 2px 6px 20px 8px rgba(204,198,204,1);
+    box-shadow: 2px 6px 20px 8px rgba(204,198,204,1);
+    
+}
+
+body{
+    background-color: blue;
 }
 .titulos{
-    color: #ab12ab;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,7 +60,7 @@ main {
     background-color: #fff;
     position: absolute;
     left: calc(50% - 10px);
-    top: calc(80% - 10px);
+    top: calc(63% - 10px);
     animation: rotacion 60s linear infinite;
     animation-play-state: paused;
 }
