--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,12 @@ main {
     left: 0;
     right: 0;
     margin: auto;
-    background-color: 
+    background-color: white;
     padding: 20px;
     border-radius: 30px;
     -webkit-box-shadow: 2px 6px 20px 8px rgba(204,198,204,1);
     -moz-box-shadow: 2px 6px 20px 8px rgba(204,198,204,1);
     box-shadow: 2px 6px 20px 8px rgba(204,198,204,1);
-    
 }
 
 body{
